fix for tables overlap in process poll results screen

--- a/client/src/app/manager/process-poll-results/process-poll-results.component.css
+++ b/client/src/app/manager/process-poll-results/process-poll-results.component.css
@@ -15,6 +15,9 @@ td {
     margin: 16px;   
     width:40%;
 }
+.table-container:last-child {
+    float: left;
+}
 .submit-container {
     display: block;
     float: left;
